--- a/public/index.html
+++ b/public/index.html
@@ -19,3 +19,9 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+    #app
+    {
+        background-image: url("./images/background.jpg")  !important;
+    }
+</style>
