--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,6 @@
     #app
     {
         background-image: url("./images/background.jpg")  !important;
+        /*background-color: #CAD7FF !important;*/
     }
 </style>
